--- a/templates/map5.html
+++ b/templates/map5.html
@@ -7,13 +7,90 @@
 <div class= "row">
 
 <div class= "col-md-3">
+
+		<p>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		
+		<br>
+		<br>
+		
+		</p>
+		
 	<h3>Enter Information</h3>
 	
-	<p class="text-justify">
-	Number of sites to export (optimized): 
-	</p>
 <form method="POST" action="{% url 'map5' %}">{% csrf_token %}
-        <input type="number" name="nsite">
+
+       <label for="area">Number of sites to export (optimized for Euclidean distance):</label>
+		<input type="range" name="nsite" value=1 min=1 max=10 oninput="this.nextElementSibling.value = this.value">
+		<output>1</output>
+		<style>
+input[type="range"] {
+  -webkit-appearance: none;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+  width: 80%;
+  height: 1em;
+  margin: 0;
+  padding: 0;
+  border: none;
+  border-radius: .3em;
+  background-color: #222222;
+  background: linear-gradient(#333333, #222222);
+  outline: none;
+  font: 1em trebuchet ms, verdana, arial, sans-serif;
+  cursor: pointer;
+}
+
+input[type="range"]::-moz-range-track {
+  border: inherit;
+  background: transparent;
+}
+
+input[type="range"]::-ms-track {
+  border: inherit;
+  color: transparent;
+  background: transparent;
+}
+
+input[type="range"]::-ms-fill-lower,
+input[type="range"]::-ms-fill-upper {
+  background: transparent;
+}
+
+input[type="range"]::-ms-tooltip {
+  display: none;
+}
+
+input[type="range"]::-moz-range-thumb {
+  width: 1em;
+  height: 1em;
+  border-radius: .3em;
+  border: none;
+  background-image: linear-gradient(to bottom, #27AE60 0, #27AE60 100%);
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 1em;
+  height: 1em;
+  border-radius: .3em;
+  border: none;
+  background-image: linear-gradient(to bottom, #27AE60 0, #27AE60 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #27AE60), color-stop(100%, #27AE608));
+  background-image: -webkit-linear-gradient(top, #27AE60 0, #27AE60 100%);
+}
+
+input[type="range"]::-ms-thumb {
+  width: 1em;
+  height: 1em;
+  border-radius: .3em;
+  border: 0;
+  background-image: linear-gradient(to bottom, #27AE60 0, #27AE60 100%);
+}
+		</style>
 		
         <input type="submit" name="submit">
 </form>
